<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/schedule_dest"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/schedule" />
    <item
        android:id="@+id/news_dest"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/news" />

    <item
        android:id="@+id/people_details_dest"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/teachers" />
    <item
        android:id="@+id/profileFragment_dest"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />

</menu>